--- a/src/App.scss
+++ b/src/App.scss
@@ -18,12 +18,17 @@ html {
       border-radius: 5px;
     }
 
-    & .startButton {
+    & .startButton,
+      .rulesButton {
       margin-left: 20px;
       padding: 5px 15px;
       background-color: aquamarine;
       border: 2px solid #000;
       border-radius: 5px;
+    }
+
+    & .rulesButton {
+      background-color: rgb(127, 229, 255);
     }
   }
 
