--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,6 @@ html {
     }
   }
 
-
   & .squaresBlock {
     display: grid;
     width: 600px;
@@ -81,6 +80,12 @@ html {
         background-color: aqua;
       }
     }
+  }
+
+  .chooseModeText {
+    margin-top: 50px;
+    font-size: 36px;
+    color: rgb(230, 66, 66);
   }
 
   & .asideArea {
